2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (View): Fix subtitle number search after subtitle
	removals or inserts.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/view.py (ViewAgent._toggle_column): Autosize
	columns after changing visibility.

2008-08-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py: Gray out the current position
	entries to signal that they are not editable.

2008-08-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/preview.py (PreviewAgent._handle_output): Add
	command to the beginning of the output.

2008-08-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/errors.py (ProcessError): New error class.

	* gaupol/util.py (start_process): Raise gaupol.ProcessError instead of
	OSError if something goes wrong.

	* gaupol/agents/preview.py (PreviewAgent.preview): Raise
	gaupol.ProcessError instead of OSError if unable to start process.

	* gaupol/gtk/agents/preview.py (PreviewAgent.preview): Handle
	gaupol.ProcessError. Fixes #518981.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/paths.py (get_py2exe_directory): Fix.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (browse_url): Don't try 'start' on Windows.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Import py2exe. Fix values of data_files and kwargs.
	(InstallData.run): Do not try compiling translations on Windows.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (View._init_columns): Set text columns to expand
	and other columns to not expand.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/subtitle.py (Subtitle.__cmp__): Speed up by using direct
	attribute access instead of property access.

2008-08-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Update with correct paths for moved files.

2008-08-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants.py (_LocalePage._on_tree_view_cell_toggled):