@@ -23,14 +23,11 @@ Gaupol 0.13
  [D] Fix error with encoding auto-detection (#10278)
  [D] Fix error starting spell-check if no dictionary (#10526)
  [D] Fix preview error dialog if video player not found (#518981)
- [ ] Fix preview error with MPlayer (terminal type unknown)
  [D] Fix subtitle number search after subtitle removals or inserts
  [D] Fix error displaying right-click menu in cells (kitone)
  [D] Fix IndexError with multiline tags in text cells (#547170)
- [?] Fix window type for preferences and search dialogs
+ [D] Fix window type and transientness for preferences dialog
  [D] Fix error closing the search dialog from the window titlebar
- [?] Fix preview start position with shift dialog
- [?] Allow Escape key to close the text correction assistant
  [D] Fix color markup tag conversions with various formats
  [D] Fix conversions of font tags with the SubRip format
  [D] Add GenericName field to the desktop file
